--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -53,29 +53,8 @@ config("nfc_config") {
   ]
 }
 
-ohos_prebuilt_etc("nfc_prebuilt_config_apdu") {
-  source = "res/nfc_card_apdu.json"
-  relative_install_dir = "nfc"
-  part_name = "nfc"
-  subsystem_name = "communication"
-}
-
-ohos_prebuilt_etc("nfc_prebuilt_config_string_en") {
-  source = "res/en/string_en.json"
-  relative_install_dir = "nfc"
-  part_name = "nfc"
-  subsystem_name = "communication"
-}
-
-ohos_prebuilt_etc("nfc_prebuilt_config_string_zh") {
-  source = "res/zh/string_zh.json"
-  relative_install_dir = "nfc"
-  part_name = "nfc"
-  subsystem_name = "communication"
-}
-
-ohos_prebuilt_etc("nfc_prebuilt_config_notification_icon") {
-  source = "res/nfc_icon.png"
+ohos_prebuilt_etc("nfc_prebuilt_config") {
+  source = "resources"
   relative_install_dir = "nfc"
   part_name = "nfc"
   subsystem_name = "communication"
@@ -92,6 +71,7 @@ nfc_service_source = [
   "src/external_deps/nfc_event_publisher.cpp",
   "src/external_deps/nfc_hisysevent.cpp",
   "src/external_deps/nfc_notification_publisher.cpp",
+  "src/external_deps/nfc_param_util.cpp",
   "src/external_deps/nfc_permission_checker.cpp",
   "src/external_deps/nfc_preferences.cpp",
   "src/external_deps/tag_ability_dispatcher.cpp",
@@ -196,10 +176,7 @@ ohos_shared_library("nfc_service") {
   version_script = "libnfc_service_version_script.txt"
 
   deps = [
-    ":nfc_prebuilt_config_apdu",
-    ":nfc_prebuilt_config_notification_icon",
-    ":nfc_prebuilt_config_string_en",
-    ":nfc_prebuilt_config_string_zh",
+    ":nfc_prebuilt_config",
     "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
     "etc/init:etc",
     "src/notification:nfc_notification",
