add getbarcode interface
Signed-off-by: amunra03 <liumanhao@huawei.com>

--- a/frameworks/js/napi/tag/BUILD.gn
+++ b/frameworks/js/napi/tag/BUILD.gn
@@ -38,12 +38,13 @@ ohos_shared_library("tag") {
     "nfc_napi_foreground_dispatch.cpp",
     "nfc_napi_ndef_message.cpp",
     "nfc_napi_tag.cpp",
+    "nfc_napi_tag_barcode.cpp",
     "nfc_napi_tag_isodep.cpp",
     "nfc_napi_tag_mifare_classic.cpp",
     "nfc_napi_tag_mifare_ul.cpp",
     "nfc_napi_tag_ndef.cpp",
     "nfc_napi_tag_ndef_formatable.cpp",
-    "nfc_napi_tag_sesstion.cpp",
+    "nfc_napi_tag_session.cpp",
     "nfc_napi_taga.cpp",
     "nfc_napi_tagb.cpp",
     "nfc_napi_tagf.cpp",
