--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -53,8 +53,29 @@ config("nfc_config") {
   ]
 }
 
-ohos_prebuilt_etc("nfc_prebuilt_config") {
-  source = "resources"
+ohos_prebuilt_etc("nfc_prebuilt_config_apdu") {
+  source = "res/nfc_card_apdu.json"
+  relative_install_dir = "nfc"
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_prebuilt_etc("nfc_prebuilt_config_string_en") {
+  source = "res/en/string_en.json"
+  relative_install_dir = "nfc"
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_prebuilt_etc("nfc_prebuilt_config_string_zh") {
+  source = "res/zh/string_zh.json"
+  relative_install_dir = "nfc"
+  part_name = "nfc"
+  subsystem_name = "communication"
+}
+
+ohos_prebuilt_etc("nfc_prebuilt_config_notification_icon") {
+  source = "res/nfc_icon.png"
   relative_install_dir = "nfc"
   part_name = "nfc"
   subsystem_name = "communication"
@@ -176,7 +197,10 @@ ohos_shared_library("nfc_service") {
   version_script = "libnfc_service_version_script.txt"
 
   deps = [
-    ":nfc_prebuilt_config",
+    ":nfc_prebuilt_config_apdu",
+    ":nfc_prebuilt_config_notification_icon",
+    ":nfc_prebuilt_config_string_en",
+    ":nfc_prebuilt_config_string_zh",
     "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
     "etc/init:etc",
     "src/notification:nfc_notification",
