--- a/interfaces/inner_api/common/BUILD.gn
+++ b/interfaces/inner_api/common/BUILD.gn
@@ -61,9 +61,11 @@ ohos_shared_library("nfc_inner_kits_common") {
   external_deps = [
     "ability_base:want",
     "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "samgr:samgr_proxy",
   ]
 
   part_name = "nfc"
