--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -79,6 +79,7 @@ ohos_unittest("controller_test") {
     "controller_test/nfc_controller_impl_test.cpp",
     "controller_test/nfc_controller_test.cpp",
     "controller_test/nfc_preferences_test.cpp",
+    "controller_test/on_card_emulation_notify_cb_stub_test.cpp",
     "controller_test/query_app_info_callback_stub_test.cpp",
     "controller_test/reader_mode_callback_stub_test.cpp",
     "controller_test/tag_ability_dispatcher_test.cpp",
