disabling an nfc policy
Signed-off-by: fengyong <fengyong21@h-partners.com>
Signed-off-by: fengyong <fengyong21@h-partners.com>
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/interfaces/inner_api/controller/BUILD.gn
+++ b/interfaces/inner_api/controller/BUILD.gn
@@ -73,6 +73,7 @@ ohos_shared_library("nfc_inner_kits_controller") {
     "data_share:datashare_common",
     "data_share:datashare_consumer",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
