--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -54,5 +54,6 @@ group("fuzztest") {
     "tags_test/nfca_tag:nfca_tag_fuzztest",
     "tags_test/nfcsdkcommon:nfcsdkcommon_fuzztest",
     "tags_test/taginfo:taginfo_fuzztest",
+    "tags_test/tagsession_test/tagsession:tagsession_fuzztest",
   ]
 }
