fix unit moudle_out_path
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/nfc.gni
+++ b/nfc.gni
@@ -14,6 +14,7 @@
 NFC_DIR = "//foundation/communication/nfc"
 
 fuzz_module_out_path = "nfc/nfc"
+unit_module_out_path = "nfc/nfc"
 
 declare_args() {
   nfc_use_vendor_nci_native = false
