fix register hce fail on nfc turning on and expire after nfc reopen
Signed-off-by: wurui <ruiwu323@foxmail.com>

--- a/frameworks/js/napi/cardEmulation/BUILD.gn
+++ b/frameworks/js/napi/cardEmulation/BUILD.gn
@@ -52,6 +52,7 @@ ohos_shared_library("cardemulation") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "samgr:samgr_proxy",
   ]
 
   relative_install_dir = "module/nfc"
