disabing an nfc policy
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/services/BUILD.gn
+++ b/services/BUILD.gn
@@ -140,6 +140,7 @@ nfc_service_external_deps = [
   "eventhandler:libeventhandler",
   "hilog:libhilog",
   "hisysevent:libhisysevent",
+  "init:libbegetutil",
   "ipc:ipc_core",
   "miscdevice:vibrator_interface_native",
   "power_manager:powermgr_client",
