--- a/frameworks/js/napi/controller/BUILD.gn
+++ b/frameworks/js/napi/controller/BUILD.gn
@@ -28,11 +28,13 @@ ohos_shared_library("controller") {
   defines = [ "DEBUG" ]
   install_enable = true
   include_dirs = [
+    "$NFC_DIR/frameworks/js/napi/common",
     "$NFC_DIR/interfaces/inner_api/common",
     "$NFC_DIR/interfaces/inner_api/controller",
   ]
 
   sources = [
+    "$NFC_DIR/frameworks/js/napi/common/nfc_ha_event_report.cpp",
     "nfc_napi_controller.cpp",
     "nfc_napi_controller_adapter.cpp",
     "nfc_napi_controller_event.cpp",
@@ -48,6 +50,7 @@ ohos_shared_library("controller") {
     "c_utils:utils",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
+    "hiappevent:hiappevent_innerapi",
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
