--- a/services/src/notification/BUILD.gn
+++ b/services/src/notification/BUILD.gn
@@ -34,16 +34,14 @@ ohos_shared_library("nfc_notification") {
 
   sources = [ "nfc_notification.cpp" ]
 
-  deps = [
-    "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
-    "//third_party/cJSON:cjson_static",
-  ]
+  deps = [ "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common" ]
 
   external_deps = [
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:ability_manager",
     "ability_runtime:wantagent_innerkits",
+    "cJSON:cjson_static",
     "c_utils:utils",
     "distributed_notification_service:ans_innerkits",
     "hilog:libhilog",
