新增preferences依赖 新增preferences依赖
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/test/unittest/services/BUILD.gn
+++ b/test/unittest/services/BUILD.gn
@@ -62,6 +62,7 @@ unit_test_external_deps = [
   "googletest:gtest_main",
   "hilog:libhilog",
   "ipc:ipc_core",
+  "preferences:native_preferences",
   "safwk:system_ability_fwk",
   "samgr:samgr_proxy",
   "wifi:wifi_sdk",
