新增preferences依赖 新增preferences依赖
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/external_deps_test/externaldepsproxy/externaldepsproxy_fuzzer/BUILD.gn
@@ -52,6 +52,7 @@ ohos_fuzztest("ExTernalDepsProxyFuzzTest") {
     "data_share:datashare_consumer",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "preferences:native_preferences",
   ]
 }
 
