新增preferences依赖 新增preferences依赖
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/test/fuzztest/tags_test/tagsession_test/tagsession/tagsessions_fuzzer/BUILD.gn
+++ b/test/fuzztest/tags_test/tagsession_test/tagsession/tagsessions_fuzzer/BUILD.gn
@@ -58,6 +58,7 @@ ohos_fuzztest("TagSessionsFuzzTest") {
     "data_share:datashare_consumer",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "preferences:native_preferences",
   ]
 }
 
