build.gn按标准格式修改 build.gn按标准格式修改
Signed-off-by: fengyong <fengyong21@h-partners.com>

--- a/frameworks/ets/taihe/nfc_tag/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_tag/BUILD.gn
@@ -18,10 +18,10 @@ import("../../../../nfc.gni")
 
 copy_taihe_idl("copy_taihe_nfc_tag") {
   sources = [
+    "idl/tagSession.taihe",
+    "idl/ohos.nfc.tag.tag.ndef.taihe",
     "idl/nfctech.taihe",
     "idl/ohos.nfc.tag.tag.taihe",
-    "idl/ohos.nfc.tag.tag.ndef.taihe",
-    "idl/tagSession.taihe"
   ]
 }
 
