fix drop down window not disappear problem Signed-off-by: amunra03 <liumanhao@huawei.com>
Signed-off-by: amunra03 <liumanhao@huawei.com>

--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -27,7 +27,8 @@
                 "ohos.permission.MANAGE_SETTINGS",
                 "ohos.permission.SET_WIFI_CONFIG",
                 "ohos.permission.NOTIFICATION_CONTROLLER",
-                "ohos.permission.NOTIFICATION_AGENT_CONTROLLER"
+                "ohos.permission.NOTIFICATION_AGENT_CONTROLLER",
+                "ohos.permission.SUBSCRIBE_NOTIFICATION_WINDOW_STATE"
             ]
         }
     ]
