add permission to startAbility
Signed-off-by: wenxiaolin <wenxiaolin2@huawei.com>

--- a/services/etc/init/nfc_service.cfg
+++ b/services/etc/init/nfc_service.cfg
@@ -28,7 +28,8 @@
                 "ohos.permission.SET_WIFI_CONFIG",
                 "ohos.permission.NOTIFICATION_CONTROLLER",
                 "ohos.permission.NOTIFICATION_AGENT_CONTROLLER",
-                "ohos.permission.SUBSCRIBE_NOTIFICATION_WINDOW_STATE"
+                "ohos.permission.SUBSCRIBE_NOTIFICATION_WINDOW_STATE",
+                "ohos.permission.START_ABILITIES_FROM_BACKGROUND"
             ]
         }
     ]
