--- a/frameworks/cj/controller/BUILD.gn
+++ b/frameworks/cj/controller/BUILD.gn
@@ -35,6 +35,7 @@ ohos_shared_library("cj_nfc_controller_ffi") {
     "common_event_service:cesfwk_innerkits",
     "hiappevent:hiappevent_innerapi",
     "hilog:libhilog",
+    "ipc:ipc_single",
     "samgr:samgr_proxy",
     "napi:cj_bind_ffi",
     "napi:cj_bind_native",
