拆分fuzz.cpp中的用例
Signed-off-by: y60072242 <yangpengwei5@h-partners.com>

--- a/test/fuzztest/services_test/tags_test/tagsessionstub/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/BUILD.gn
@@ -15,5 +15,8 @@ import("//build/test.gni")
 
 group("tagsessionstub_fuzztest") {
   testonly = true
-  deps = [ "tagsessionstub_fuzzer:fuzztest" ]
+  deps = [
+    "tagsessionstub_fuzzer:fuzztest",
+    "tagsessionstubhandle_fuzzer:fuzztest",
+  ]
 }
