修改BUILD.gn. 修改BUILD.gn.
Signed-off-by: yangpengwei <yangpengwei5@h-partners.com>

--- a/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstubhandle_fuzzer/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/tagsessionstubhandle_fuzzer/BUILD.gn
@@ -40,6 +40,6 @@ group("fuzztest") {
   deps = []
   deps += [
     # deps file
-    ":TagSessionStubFuzzTest",
+    ":TagSessionStubHandleFuzzTest",
   ]
 }
