--- a/frameworks/ets/taihe/nfc_controller/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_controller/BUILD.gn
@@ -22,11 +22,11 @@ copy_taihe_idl("copy_taihe_nfc_controller") {
 
 subsystem_name = "communication"
 part_name = "nfc"
-taihe_generated_file_path = "$taihe_file_path/out/$subsystem_name/$part_name"
+taihe_generated_file_path_nfcController = "$taihe_file_path/out/$subsystem_name/$part_name/nfcController"
 
 ohos_taihe("run_taihe") {
-  taihe_generated_file_path = "$taihe_generated_file_path"
-  deps = [ ":copy_taihe_nfc_controller" ]
+  taihe_generated_file_path = "${taihe_generated_file_path_nfcController}"
+  deps = [":copy_taihe_nfc_controller"]
   outputs = [
     "$taihe_generated_file_path/src/ohos.nfc.controller.nfcController.ani.cpp",
     "$taihe_generated_file_path/src/ohos.nfc.controller.nfcController.abi.c",
@@ -44,7 +44,7 @@ taihe_shared_library("nfc_fwk_taihe_controller") {
   }
   branch_protector_ret = "pac_ret"
 
-  taihe_generated_file_path = "$taihe_generated_file_path"
+  taihe_generated_file_path = "${taihe_generated_file_path_nfcController}"
   sources = get_target_outputs(":run_taihe")
 
   defines = [ "DEBUG" ]
@@ -76,8 +76,8 @@ taihe_shared_library("nfc_fwk_taihe_controller") {
 }
 
 generate_static_abc("nfc_fwk_etc_controller_abc") {
-  base_url = "$taihe_generated_file_path"
-  files = [ "$taihe_generated_file_path/@ohos.nfc.controller.ets" ]
+  base_url = "${taihe_generated_file_path_nfcController}"
+  files = [ "${taihe_generated_file_path_nfcController}/@ohos.nfc.controller.ets" ]
   is_boot_abc = "True"
   device_dst_file = "/system/framework/nfc_fwk_etc_controller_abc.abc"
   dependencies = [ ":run_taihe" ]
