--- a/frameworks/ets/taihe/nfc_cardEmulation/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_cardEmulation/BUILD.gn
@@ -47,17 +47,23 @@ taihe_shared_library("nfc_fwk_taihe_cardEmulation") {
   taihe_generated_file_path = "${taihe_generated_file_path_nfcCardEmulation}"
   sources = get_target_outputs(":run_taihe")
 
-  defines = [ "DEBUG" ]
+  defines = [ "NFC_DEBUG" ]
   include_dirs = [
     "inc",
+    "$NFC_DIR/frameworks/ets/taihe/nfc_common",
     "$NFC_DIR/interfaces/inner_api/common",
   ]
   sources += [
     "src/ani_constructor.cpp",
+    "src/nfc_taihe_card_emulation_event.cpp",
     "src/impl/ohos.nfc.cardEmulation.nfcCardEmulation.impl.cpp"
   ]
 
   external_deps = [
+    "ability_base:want",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
+    "bundle_framework:bms_ani_common",
     "c_utils:utils",
     "hilog:libhilog",
     "ipc:ipc_core",
