nfc_cardEmulation taihe fwk层实现
Signed-off-by: y60072242 <yangpengwei5@h-partners.com>

--- a/frameworks/ets/taihe/nfc_tag/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_tag/BUILD.gn
@@ -19,7 +19,7 @@ import("../../../../nfc.gni")
 copy_taihe_idl("copy_taihe_nfc_tag") {
   sources = [
     "idl/tagSession.taihe",
-    "idl/ohos.nfc.tag.tag.nedf.taihe",
+    "idl/ohos.nfc.tag.tag.ndef.taihe",
     "idl/nfctech.taihe",
     "idl/ohos.nfc.tag.tag.taihe",
   ]
