--- a/frameworks/ets/taihe/nfc_tag/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_tag/BUILD.gn
@@ -21,6 +21,7 @@ copy_taihe_idl("copy_taihe_nfc_tag") {
     "idl/tagSession.taihe",
     "idl/nfctech.taihe",
     "idl/ohos.nfc.tag.tag.taihe",
+    "idl/ohos.nfc.tag.tag.ndef.taihe",
   ]
 }
 
@@ -38,6 +39,8 @@ ohos_taihe("run_taihe") {
     "$taihe_generated_file_path/src/nfctech.abi.c",
     "$taihe_generated_file_path/src/ohos.nfc.tag.tag.ani.cpp",
     "$taihe_generated_file_path/src/ohos.nfc.tag.tag.abi.c",
+    "$taihe_generated_file_path/src/ohos.nfc.tag.tag.ndef.ani.cpp",
+    "$taihe_generated_file_path/src/ohos.nfc.tag.tag.ndef.abi.c",
   ]
 }
 
