--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -40,7 +40,6 @@ group("fuzztest") {
     "services_test/settingdatashareimpl_test/settingdatashareimpl:settingdatashareimpl_fuzztest",
     "services_test/tagabilitydispatcher_test/tagabilitydispatcher:tagabilitydispatcher_fuzztest",
     "services_test/tagdispatcher_test/tagdispatcher:tagdispatcher_fuzztest",
-    "services_test/tags_test/tagsessionstub:tagsessionstub_fuzztest",
     "services_test/tagsession_test/tagsession:tagsession_fuzztest",
     "services_test/utils_test/nfctimer:nfctimer_fuzztest",
     "services_test/wificonnectionmanager_test/wificonnectionmanager:wificonnectionmanager_fuzztest",
@@ -54,6 +53,6 @@ group("fuzztest") {
     "tags_test/nfca_tag:nfca_tag_fuzztest",
     "tags_test/nfcsdkcommon:nfcsdkcommon_fuzztest",
     "tags_test/taginfo:taginfo_fuzztest",
-    "tags_test/tagsession_test/tagsession:tagsession_fuzztest",
+    "tags_test/tagsession_test:tagsessions_fuzztest",
   ]
 }
