--- a/test/fuzztest/services_test/tags_test/tagsessionstub/BUILD.gn
+++ b/test/fuzztest/services_test/tags_test/tagsessionstub/BUILD.gn
@@ -15,8 +15,5 @@ import("//build/test.gni")
 
 group("tagsessionstub_fuzztest") {
   testonly = true
-  deps = [
-    "tagsessionstub_fuzzer:fuzztest",
-    "tagsessionstubhandle_fuzzer:fuzztest",
-  ]
+  deps = [ "tagsessionstub_fuzzer:fuzztest" ]
 }
