ArkTs1.2 taihe framework层代码适配 ArkTs1.2 taihe framework层代码适配
Signed-off-by: yangpengwei <yangpengwei5@h-partners.com>

--- a/frameworks/ets/taihe/nfc_tag/BUILD.gn
+++ b/frameworks/ets/taihe/nfc_tag/BUILD.gn
@@ -76,7 +76,7 @@ taihe_shared_library("nfc_fwk_taihe_tag") {
   external_deps = [
     "ability_base:want",
     "ability_runtime:ani_common",
-    "ability_runtime:featureability_ani",
+    "featureAbility:featureability_ani",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "bundle_framework:bms_ani_common",
